# IFT3100_LABO3

./: CMakeLists.txt  readme
pkg/glad/: CMakeLists.txt  glad.cpp  glad.h
pkg/glad/src/: glad.cpp
src/: main.cpp  shader.cpp  shader.hpp  shape.cpp  shape.hpp
